fix funky areas when scrolling on iPhone

--- a/juniorguru/web/static/src/css/common.scss
+++ b/juniorguru/web/static/src/css/common.scss
@@ -4,12 +4,15 @@ html {
 }
 
 html, body {
-  background: $white;
+  background: $black;
 }
-
 
 html {
   color: $black;
+}
+
+.body-container {
+  background: $white;
 }
 
 a {
